<resources>
    <string name="app_name">SmartButton</string>
    <string name="smart_button">Smart Button® </string>
    <string name="action_settings">Settings</string>
    <string name="test_string">This is a test</string>
    <string name="select_language">Select a language</string>
    <string-array name="lang_select">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="test_text">Select a language</string>
    <string name="error_message">Failed to load your resources. Please close and open the Smart Button® app to try again.</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="view_list_of_push_notifications">View list of push notifications</string>
    <string name="emergency_broadcast">Send Emergency Broadcasts</string>
    <string name="send_to_app_or_desktop">Send Broadcasts to apps or desktops</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="hint">Enter broadcast message here</string>
    <string name="canned_message">-Choose a Canned Message-</string>
    <string name="send_to_apps">Send to Apps</string>
    <string name="send_to_desktop">Send to Desktops</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="clear_broadcast">Clear Broadcasts</string>
    <string name="conversations_title">Conversations</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="notifications_title">Notifications/Broadcasts</string>
    <string name="add_room_info_title">Add Room Information</string>
    <string name="identity">Identity</string>
    <string name="help">Help/Resources</string>
    <string name="notifications_action_bar">Notifications</string>
    <string name="conversations_action_bar">Conversations</string>
    <string name="select_image_title">Add Photo</string>
    <string name="conversation_members">Conversation Members</string>
    <string name="success_alert">Your Smart Button alert has been sent successfully.</string>
    <string name="smartbutton_disabled">Smart Button is disabled!</string>
    <string name="smartbutton_disabled_law">Law enforcement users are not allowed to press the Smart Button. If you wish to send a broadcast, please use the "Notifications" tab to access the "Send Emergency Broadcasts" section</string>
    <string name="success_alert_title">Success</string>
    <string name="select_title">-Select Title-</string>
    <string name="disabled">DISABLED</string>
    <string name="disabled_message">The SmartButton is currently disabled. Please wait until the SmartButton is re-enabled.</string>
    <string name="location_error">Location settings are inadequate, and cannot be  +
                                    fixed here. Fix in Settings.</string>
    <string name="input_message">Input message</string>
    <string name="chat_name">John Doe</string>
    <string name="text_message">Text Message</string>
    <string name="my_identity_lbl">My Identity</string>
    <string name="reveal_your_name_lbl">Enter name</string>
    <string name="question_button_text1">Select COVID-19 Status</string>
    <string name="spinner_title" translatable="false">Select COVID-19 Status</string>
    <string name="reveal_your_email_lbl">Enter email</string>
    <string name="reveal_your_cellphone_lbl">Enter cellphone</string>
    <string name="reveal_your_staff_id_lbl">Enter staff ID</string>
    <string name="your_picture_lbl">your picture</string>
    <string name="staff_id_lbl">Staff ID</string>
    <string name="select_your_school_lbl">Select your school</string>
    <string name="add_incident_contacts_lbl">"Add contacts for Smart Button®  use "</string>
    <string name="add_social_media">Add social media</string>
    <string name="patent_notice">Powered by Anonymous Alerts® Patented (U.S. Patent No. 9,071,579)</string>
    <string name="title_activity_emergency_dial">Emergency Dial</string>
    <string name="title_activity_locate_me_contact">Contact manager</string>
    <string name="title_activity_locate_me_edit">Identity</string>
    <string name="title_activity_locator">Smart Button®</string>
    <string name="identity_name">Name</string>
    <string name="identity_photo">Photo</string>
    <string name="identity_email">Email</string>
    <string name="identity_phone">Phone</string>
    <string name="identity_room_info">Add room information</string>
    <string name="identity_save_info">Save Information</string>
    <string name="identity_change_photo">Change\nPhoto</string>
    <string name="identity_default_emergency">Default Emergency Contacts</string>
    <string name="accept">Accept</string>
    <string name="eula">COPYRIGHTS</string>
    <string name="showcase_smart_button">In an emergency, press and hold the Smart Button®  for 3 seconds to report your location</string>
    <string name="got_it">Next</string>
    <string name="call_911">In an emergency press this button in order to call 911</string>
    <string name="select_school">Choose your school</string>
    <string name="select_message">Choose your incident type</string>
    <string name="show_enter_name">You must first add or update your information before using the Smart Button®  in “Identity”. Firstly, you must provide your name.</string>
    <string name="choose_picture">Choose your picture</string>
    <string name="choose_title">Choose your title</string>
    <string name="show_choose_school">You must provide your school/building/campus</string>
    <string name="show_choose_title">You must provide your title</string>
    <string name="add_emergency_contacts">Add your emergency contacts</string>
    <string name="default_contact">These are your default contacts</string>
    <string name="save_identity">Save your identity information</string>
    <string name="show_add_your_picture">Add Your Picture</string>
    <string name="update_available">Update available</string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
    <string name="new_version">A new version of this app is available. Please update now</string>
    <string name="show_default_contact">Here is an example of a default contact. The Default Contacts are entered by your organization. You may be able to add emergency contacts. You can add up to five personal emergency contacts.</string>
    <string name="login">Setup/Login</string>
    <string name="password">Password </string>
    <string name="prompt_account">Username</string>
    <string name="forgotpass_toast1">Your account information has been sent to the email provided!</string>
    <string name="forgotpass_toast2">The email provided is not associated with a registered Smart Button® account</string>
    <string name="forgotpass_error1">Something went wrong, please try again later</string>
    <string name="home_dialogbutton_updateidentity">Update Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_password_required">Password field is required</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_account">This username is invalid</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_help">Help</string>
    <string name="action_chat">Chat</string>
    <string name="add_from_contact">Add from contact</string>
    <string name="smart_button_html"><![CDATA[<strong><font color=#000000>Smart </font><font color=#FF0000>Button</font><font color=#000000>\u00AE</font></strong>]]></string>
    <string name="update_contact">Update</string>
    <string name="failed">Failed to show</string>
    <string name="add_incident_contacts">Add emergency contacts</string>
    <string name="add_your_picture">Add your picture</string>
    <string name="no_emergency_contacts">No emergency contact added</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_pushnotifications_list">Items</string>
    <string name="title_pushnotifications_detail">PushNotifications Detail</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcm sender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_defaultSenderId_res">334368165423</string>
    <string name="anonymous_patent" translatable="false">Anonymous Alerts® Patented (U.S. Patent No. 9,071,579)</string>
    <string name="message">Messages</string>
    <string name="title_activity_help_new">Help</string>
    <string name="title_activity_splash">SmartButton</string>
    <string name="title_activity_email_confirm">Email Confirmation</string>
    <string name="title_activity_password_reset">Password Reset</string>
    <string name="no_message_received_yet">No message received yet</string>
    <string name="contacts">Contacts</string>
    <string name="title_chatitem_list">Conversations</string>
    <string name="conversation_hint">Type Message</string>
    <string name="title_chatitem_detail">Conversation Messages</string>
    <string name="title_activity_create_conversation">Create Conversation</string>
    <string name="title_activity_choose_receiver">ChooseReceiverActivity</string>
    <string name="emergency_contact_string">Emergency Contacts</string>
    <string name="take_a_photo">TAKE A PHOTO</string>
    <string name="select_a_photo">SELECT A PHOTO</string>
    <string name="take_a_video">TAKE A VIDEO</string>
    <string name="select_a_video">SELECT A VIDEO</string>
    <string name="attach_media">Attach Media</string>
    <string name="send">Send</string>
    <string name="view">View</string>
    <string name="emergency_conversations">Emergency Conversations</string>
    <string name="mobile_2_way_conversations">Mobile 2-Way Conversations</string>
    <string name="access_one_way">Access 1-to-1 conversations</string>
    <string name="conversations_mobile">Mobile</string>
    <string name="conversations_mobile_desktop">Desktop/Mobile</string>
    <string name="access_emergency_conversations">Access Emergency Conversations</string>
    <string name="Enter_Password">Enter password</string>
    <string name="Password_Confirmed">Confirm your password</string>
    <string name="Reset_Button">Reset</string>
    <string name="Enter_Email">Enter your email</string>
    <string name="Confirm_Email">Confirm your email</string>
    <string name="Next">Next</string>
    <string name="Enter_Email_Text">Enter the email address associated with your Smart Button® account</string>
    <string name="Enter_Email_Address">Enter email address</string>
    <string name="Long_Text_PR">If the email address provided is valid, the username and password associated with the account will be delivered to the email address</string>
    <string name="Send_Password">Send Password</string>
</resources>