<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:id="@+id/up_button_container">

       <Button
           android:id="@+id/take_photo_button"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="25dp"
           android:text="@string/take_a_photo"
           android:textColor="@color/white"
           android:background="@color/blue"
           android:textStyle="bold"
           />

       <Button
           android:id="@+id/select_photo_button"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="10dp"
           android:text="@string/select_a_photo"
           android:textColor="@color/white"
           android:background="@color/blue"
           android:textStyle="bold"
           />

       <Button
           android:id="@+id/take_video_button"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="30dp"
           android:text="@string/take_a_video"
           android:textColor="@color/white"
           android:background="@color/blue"
           android:textStyle="bold"
           />

       <Button
           android:id="@+id/select_video_button"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="10dp"
           android:text="@string/select_a_video"
           android:textColor="@color/white"
           android:background="@color/blue"
           android:textStyle="bold"
           />




   </LinearLayout>


    <Button
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/upload_media_button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="150dp"
        android:text="@string/attach_media"
        android:background="@color/green_light"

        />

</RelativeLayout>