<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_message"
            android:textColor="@color/title_gray"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:textSize="16sp"
            android:id="@+id/broadcastCounterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:minWidth="50dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_sb_alert_message"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"

        android:background="@drawable/edit_text_rect_border_gray"
        android:gravity="top|start"
        android:hint="@string/hint"
        android:inputType="textMultiLine"
        android:textSize="14sp" />


    <Spinner
        android:id="@+id/spinner_sb_desktop_incidents"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:padding="5dp"
        android:background="@drawable/select_sb_incidents_spinner_bg"

        />


    <Button
        android:id="@+id/btn_select_sb_groups"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:background="@drawable/select_sb_building_spinner_bg"

        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_select_sb_usergroups"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:background="@drawable/select_sb_building_spinner_bg"

        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/spinner_sb_desktop_buildings"
        android:layout_width="match_parent"
        android:layout_height="30dp"

        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:padding="5dp"
        android:background="@drawable/select_sb_building_spinner_bg"
        android:visibility="gone"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >


        <CheckBox
            android:id="@+id/checkbox_send2apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"

            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/send_to_apps" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <CheckBox
            android:id="@+id/checkbox_send2desk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/send_to_desktop" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_send_sb_alerts"
        android:layout_width="200dp"
        android:layout_height="35dp"

        android:layout_gravity="center"
        android:layout_marginTop="25dp"

        android:background="@drawable/button_bg_green_rounded"
        android:text="@string/send_broadcast"
        android:textColor="@color/white"

        android:textSize="14sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btn_clear_sb_alerts"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@color/transparent"

        android:text="@string/clear_broadcast"


        android:textColor="#5399C9"

        android:textSize="14sp" />


</LinearLayout>