<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical"
        android:text="@string/view"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:background="@color/blue_lighter"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_warning_black_24"
            android:padding="5dp"
            android:contentDescription="@string/push_notifications"
            />

        <LinearLayout
            android:id="@+id/view_push_notifications_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_notifications"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_list_of_push_notifications"
                android:textSize="13sp"
                android:textColor="@color/title_gray"

                />
            <fragment
                android:name="messagelogix.com.smartbuttoncommunications.notifications.DefaultNotificationsList"
                android:id="@+id/notiflist_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical"
        android:text="@string/send"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:background="@color/blue_lighter"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_send_broadcast"
            android:padding="5dp"
            android:contentDescription="@string/push_notifications"
            />

        <LinearLayout
            android:id="@+id/send_notifications_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Emergency Broadcasts"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/sendBroadcastSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Broadcasts to apps or desktops"
                android:textSize="13sp"
                android:textColor="@color/title_gray"

                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>